[metadata]
name = gpt-test-writer
version = attr: gpt_test_writer.__version__
author = Kasper Janehag
description = A library to automatically write unittests for your Python Package

[options]
package_dir =
	= src
packages = find_namespace:
python_requires = >=3.9

[options.packages.find]
where = src
